<!--

     Copyright (c) 2016 kriminal666.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.


    -->
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">KrimiTasks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="newTask">New Task</string>
    <string name="save">Save</string>
    <string name="delete">DELETE</string>
    <string name="delete_question">Are you sure to remove task?</string>
    <string name="showFinished">Show finished</string>
    <string name="DeleteAdvise">Definitely delete task?</string>
    <string name="yes">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="action_canceled">Action canceled</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="importing">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slide">Slideshow</string>
    <string name="options">Options</string>
    <string name="cummunicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="drawerTitle">KrimiTasks</string>
    <string name="drawerSubtitle">kriminalaverno@gmail.com</string>

    <!--actionbar titles-->
    <string name="title_actionBTodo">Tasks to do</string>
    <string name="title_actionBFinish">Tasks finished</string>
    <string name="title_actionBAll">All tasks</string>
    <string name="title_actionBUpdateTask">Update Task</string>
    <string name="title_actionBCreateTask">Create Task</string>

    <!--menu strings-->
    <string name="menu_share">Share</string>
    <string name="menu_discard">Discard</string>
    <string name="todo_tasks">Show Pending</string>
    <string name="finished_tasks">Show Finished</string>
    <string name="all_tasks">Show All</string>

    <!--Database Strings-->
    <string name="noTasks">No tasks found.</string>
    <string name="inserted">New task saved!</string>
    <string name="updated">Task Updated!</string>
    <string name="finished">Task Finished!</string>
    <string name="deleted">Task Deleted!</string>

    <!--Advises-->
    <string name="input_error_Title">Title is required!</string>
    <string name="input_errorDescription">Description is required!</string>
    <string name="input_error_date">Date is required!</string>
    <string name="input_error_Time">Time is required!</string>
    <string name="hint_title">TITLE</string>
    <string name="hint_description">DESCRIPTION</string>
    <string name="hint_date">DATE</string>
    <string name="hint_time">TIME</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_cards_general">Cards Options</string>

    <string name="pref_title_social_recommendations">Enable thumbnail in cards</string>
    <string name="pref_description_social_recommendations">The card will show different thumbnail
       for pending or finshed tasks.</string>

    <string name="pref_title_nav_header">Navigation header title</string>
    <string name="pref_subtitle_nav_header">Navigation header subtitle</string>
    <string name="pref_default_display_title">KrimiTasks</string>
    <string name="pref_default_display_subtitle">your.email@example.com</string>

    <string name="pref_card_load_animations_title">Select load animation</string>
    <string-array name="pref_card_load_animations">
        <item>Alpha</item>
        <item>Left</item>
        <item>Right</item>
        <item>Bottom</item>
        <item>Bottom right</item>
        <item>Scale</item>
    </string-array>
    <string-array name="pref_card_load_animations_values">
        <item>1001</item>
        <item>1002</item>
        <item>1003</item>
        <item>1004</item>
        <item>1005</item>
        <item>1006</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_description_card_swipe">Swipe card to mark as finished. Instead long click with multichoice will be used.</string>
    <string name="pref_title_card_swipe">Activate cards swipe</string>
    <string name="pref_app_vibration">Vibrate when press buttons</string>
    <string name="pref_title_app_vibration">Vibrate on buttons press</string>
    <string name="error_title">ERROR</string>
    <string name="success_title">SUCCESS</string>
    <string name="deleted_title">DELETED</string>
    <string name="title_info">INFO</string>
    <string name="krimiTasks_loading">LOADING...</string>
    <string name="pref_choose_card_background1">Choose colour 1</string>
    <string name="pref_choose_card_background2">Choose colour 2</string>
    <string name="pref_activate_card_color_title">Activate colored cards</string>
    <string name="pref_activate_card_color_descrip">Activate the colored background</string>
    <string name="task_pending_title">Pending for:</string>
    <string name="task_finished_title">Task finished at:</string>


    <!--DateSlider-->
    <string name="dateSliderTitle">Selected date</string>


</resources>
