<!--

     Copyright (c) 2016 kriminal666.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.


    -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_card_thumbnail"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_card_swipe"
        android:summary="@string/pref_description_card_swipe"
        android:title="@string/pref_title_card_swipe" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_app_vibration"
        android:summary="@string/pref_app_vibration"
        android:title="@string/pref_title_app_vibration" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_title"
        android:inputType="textCapWords"
        android:key="nav_header_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_nav_header" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_subtitle"
        android:inputType="textCapWords"
        android:key="nav_header_subtitle"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_subtitle_nav_header" />

    pref_default_display_subtitle

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1001"
        android:entries="@array/pref_card_load_animations"
        android:entryValues="@array/pref_card_load_animations_values"
        android:key="card_load_animation_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_card_load_animations_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_activate_color_card"
        android:summary="@string/pref_activate_card_color_title"
        android:title="@string/pref_activate_card_color_descrip" />

    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="pref_color_card_background1"
        android:defaultValue="@color/color_card_background_color1"
        app:supportsAlpha="true"
        android:dependency="pref_activate_color_card"
        android:title="@string/pref_choose_card_background1" />

    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="pref_color_card_background2"
        android:dependency="pref_activate_color_card"
        android:defaultValue="@color/color_card_background_color2"
        app:supportsAlpha="true"
        android:title="@string/pref_choose_card_background2" />

</PreferenceScreen>
