<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/todo_tasks"
        android:orderInCategory="100"
        android:title="@string/todo_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/finished_tasks"
        android:orderInCategory="100"
        android:title="@string/finished_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/all_tasks"
        android:orderInCategory="100"
        android:title="@string/all_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
