<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">





    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/task_title"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/hint_title"
            android:layout_marginTop="48dp"/>

    </android.support.design.widget.TextInputLayout>





    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/task_description"
        android:hint="@string/hint_description"
        android:layout_marginTop="50dp"/>



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/task_date"
        android:hint="@string/hint_date"/>




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/task_time"
        android:hint="@string/hint_time"
        android:layout_marginTop="38dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update_task"
        android:background="@drawable/oval_background"
        android:layout_marginTop="47dp"
        android:layout_gravity="center_horizontal" />


</LinearLayout>