<!--
 * *******************************************************************************
 * Copyright (c) 2016 kriminal666.
 *
 *   Licensed under the Apache License, Version 2.0 (the "License");
 *   you may not use this file except in compliance with the License.
 *   You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 *   Unless required by applicable law or agreed to in writing, software
 *   distributed under the License is distributed on an "AS IS" BASIS,
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *   See the License for the specific language governing permissions and
 *   limitations under the License.
 *  *****************************************************************************
 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kriminal.fragments.TasksView">
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">


<android.support.design.widget.TextInputLayout
    android:id="@+id/title_text_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">

    <EditText
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:id="@+id/task_title"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/hint_title"/>

</android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/description_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:id="@+id/task_description"
        android:hint="@string/hint_description"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/date_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">


        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:drawableLeft="@drawable/ic_input_calendar"
        android:ems="10"
        android:id="@+id/task_date"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:hint="@string/hint_date"/>
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/time_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

            <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/task_time"
            android:drawableLeft="@drawable/ic_input_clock"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:hint="@string/hint_time"/>
    </android.support.design.widget.TextInputLayout>



<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btn_update_task"
    android:background="@drawable/oval_background"
    android:drawableLeft="@android:drawable/ic_menu_save"
    android:layout_marginTop="47dp"
    android:layout_gravity="center_horizontal" />


</LinearLayout>
    </ScrollView>
    </FrameLayout>
